--- a/package.json
+++ b/package.json
@@ -1,18 +1,8 @@
 {
-  "name": "chat-backend",
+  "name": "zion-chat",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
-    "cors": "^2.8.6",
-    "dotenv": "^17.3.1",
-    "express": "^5.2.1"
+    "openai": "^4.86.2"
   }
 }
