--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.3",
     "openai": "^4.86.2"
   }
 }
