--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@supabase/supabase-js": "^2.97.0",
     "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.3",
-    "openai": "^4.86.2"
+    "openai": "^4.86.2",
+    "resend": "^6.9.2"
   }
 }
